change home page

--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -12,7 +12,7 @@
         <div class="text-center h4"> <u> {{ portfolio.title }}</u></div>
           <img class="card-img-top" src="{{ portfolio.image.url }}" height="115" width="255">
           <div class="card-body">
-            <p class="text-center h5"> <a href="{{ portfolio.title_pro}}">Link</a></p>
+            <p class="text-center h5"> {{ portfolio.title_pro}}</p>
             <p class="card-text ">{{ portfolio.text }}</p>
             <p class="text-center h5"> <a href="{{ portfolio.url }}">Link</a></p>
           </div>
