Change hme page

--- a/myblog/templates/base.html
+++ b/myblog/templates/base.html
@@ -48,9 +48,14 @@
 
     <section class="jumbotron text-center">
       <div class="container">
-        <h1 class="jumbotron-heading">Hi, I'm Alex.</h1>
-        <p class="lead text-muted">Hey, my name is Alex Misyuk welcome to my site.</p>
-        <img src="{% static 'alex.JPG' %}" alt="" height="299" width="220">
+        <h1 class="jumbotron-heading">Hey, my name is Alex.</h1>
+        <p class="lead text-muted">Welcome to my portfolio. I'm Web Developer. </p>
+        <ul class="lis-group">
+          <li class="list-group-item active">My Skills</li>
+          <li class="list-group-item"> Python (Django), HTML, CSS and JavaScript.</li>
+          <li class="list-group-item">Wordpress site management.</li>
+        </u>
+        <img src="{% static 'djwp.png' %}" alt="" height="299" width="500">
       </div>
     </section>
 
@@ -69,29 +74,26 @@
         <!-- Grid column -->
         <div class="col-md-4 mx-auto">
           <!-- Content -->
-          <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Footer Content</h5>
-          <p>Here you can use rows and columns here to organize your footer content. Lorem ipsum dolor sit amet, consectetur
-            adipisicing elit.</p>
+          <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Klonike-X</h5>
+          <p></p>
           </div>
           <!-- Grid column -->
           <hr class="clearfix w-100 d-md-none">
           <!-- Grid column -->
           <div class="col-md-2 mx-auto">
             <!-- Links -->
-            <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Links</h5>
+            <h5 class="font-weight-bold text-uppercase mt-3 mb-4"></h5>
             <ul class="list-unstyled">
               <li>
-                <a href="#!">Link 1</a>
+                <a href="#!">My Blog</a>
               </li>
               <li>
-                <a href="#!">Link 2</a>
+                <a href="#!">GitHub</a>
               </li>
               <li>
-                <a href="#!">Link 3</a>
+                <a href="#!">Twitter</a>
               </li>
-              <li>
-                <a href="#!">Link 4</a>
-              </li>
+
             </ul>
           </div>
           <!-- Grid column -->
@@ -99,20 +101,10 @@
           <!-- Grid column -->
           <div class="col-md-2 mx-auto">
             <!-- Links -->
-            <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Links</h5>
+            <h5 class="font-weight-bold text-uppercase mt-3 mb-4"></h5>
             <ul class="list-unstyled">
-              <li>
-                <a href="#!">Link 1</a>
-              </li>
-              <li>
-                <a href="#!">Link 2</a>
-              </li>
-              <li>
-                <a href="#!">Link 3</a>
-              </li>
-              <li>
-                <a href="#!">Link 4</a>
-              </li>
+
+
             </ul>
           </div>
           <!-- Grid column -->
@@ -120,20 +112,10 @@
           <!-- Grid column -->
           <div class="col-md-2 mx-auto">
             <!-- Links -->
-            <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Links</h5>
+            <h5 class="font-weight-bold text-uppercase mt-3 mb-4"></h5>
             <ul class="list-unstyled">
-              <li>
-                <a href="#!">Link 1</a>
-              </li>
-              <li>
-                <a href="#!">Link 2</a>
-              </li>
-              <li>
-                <a href="#!">Link 3</a>
-              </li>
-              <li>
-                <a href="#!">Link 4</a>
-              </li>
+
+
             </ul>
           </div>
           <!-- Grid column -->
