Change home page

--- a/myblog/templates/base.html
+++ b/myblog/templates/base.html
@@ -48,8 +48,8 @@
 
     <section class="jumbotron text-center">
       <div class="container">
-        <h1 class="jumbotron-heading">Hey, my name is Alex.</h1>
-        <p class="lead text-muted">Welcome to my portfolio. I'm Web Developer. </p>
+        <h1 class="jumbotron-heading">Hey, my name is Alex. I'm Web Developer.</h1>
+        <p class="lead text-muted">Welcome to my portfolio.</p>
         <ul class="lis-group">
           <li class="list-group-item active">My Skills</li>
           <li class="list-group-item"> Python (Django), HTML, CSS and JavaScript.</li>
@@ -88,7 +88,7 @@
                 <a href="#!">My Blog</a>
               </li>
               <li>
-                <a href="#!">GitHub</a>
+                <a href="http://github.com/xor0x" target="_blank">GitHub</a>
               </li>
               <li>
                 <a href="#!">Twitter</a>
