--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -14,7 +14,7 @@
           <div class="card-body">
             <p class="text-center h5"> {{ portfolio.title_pro}}</p>
             <p class="card-text ">{{ portfolio.text }}</p>
-            <p class="text-center h5"> <a href="{{ portfolio.url }}">Link</a></p>
+            <p class="text-center h5"> <a href="{{ portfolio.url }}" target="_blank">Enter</a></p>
           </div>
         </div>
       </div>
