Add new templates and app

--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'portfolio/base.html' %}
 
 {% block content %}
 <span class="d-block p-2 bg-dark text-white text-center">My Projects</span>
