--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,6 +1,19 @@
 {% extends 'blog/base.html' %}
 {% load staticfiles %}
 
+
+{% block news%}
+<div class="jumbotron p-3 p-md-5 text-white rounded bg-color">
+
+    <h1 class="display-5 font-italic">{{ news.title }}</h1>
+    <img src="{{ news.image }}" alt="">
+    <p class="lead my-3">{{ news.text }}</p>
+    <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Continue reading...</a></p>
+
+</div>
+{% endblock %}
+
+
 {% block content %}
         <div class="col-md-6">
           <div class="card flex-md-row mb-4 box-shadow h-md-250 bg-color-news">
