--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Klondike-X Web Developer</title>
+  <title>Klondike-X </title>
 
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
@@ -48,13 +48,8 @@
 
     <section class="jumbotron text-center">
       <div class="container">
-        <div class="jumbotron p-3 p-md-5 text-white rounded bg-color">
-          <div class="col-md-6 px-0">
-            <h1 class="display-4 font-italic">Title of a longer featured blog post</h1>
-            <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently about what's most interesting in this post's contents.</p>
-            <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Continue reading...</a></p>
-          </div>
-        </div>
+        {% block news %}
+        {% endblock %}
       </div>
     </section>
 
