--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -3,14 +3,16 @@
 
 
 {% block news%}
+{% for new in news.all %}
 <div class="jumbotron p-3 p-md-5 text-white rounded bg-color">
 
-    <h1 class="display-5 font-italic">{{ news.title }}</h1>
-    <img src="{{ news.image }}" alt="">
-    <p class="lead my-3">{{ news.text }}</p>
+    <h1 class="display-5 font-italic">{{ new.title }}</h1>
+    <img src="../media/{{ new.image }}" alt="">
+    <p class="lead my-3">{{ new.text }}</p>
     <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Continue reading...</a></p>
 
 </div>
+{% endfor %}
 {% endblock %}
 
 
