--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -7,7 +7,7 @@
 <div class="jumbotron p-3 p-md-5 text-white rounded bg-color">
 
     <h1 class="display-5 font-italic">{{ new.title }}</h1>
-    <img src="../media/{{ new.image }}" alt="">
+    <img class="col-lg-6"src="../media/{{ new.image }}" alt="">
     <p class="lead my-3">{{ new.text }}</p>
     <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Continue reading...</a></p>
 
@@ -17,18 +17,20 @@
 
 
 {% block content %}
-        <div class="col-md-6">
-          <div class="card flex-md-row mb-4 box-shadow h-md-250 bg-color-news">
-            <div class="card-body d-flex flex-column align-items-start">
-              <strong class="d-inline-block mb-2 text-primary">World</strong>
-              <h3 class="mb-0">
-                <a class="text-dark" href="#">Featured post</a>
-              </h3>
-              <div class="mb-1 text-muted">Nov 12</div>
-              <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-              <a href="#">Continue reading</a>
-            </div>
-            <img class="card-img-right flex-auto d-none d-lg-block" data-src="holder.js/200x250?theme=thumb" alt="Card image cap">
+{% for post in posts.all %}
+<div class="col-md-4 mt-4">
+    <div class="card profile-card-5 bg-color-news">
+      <strong class="d-inline-block mb-2 text-primary">Category: {{ post.category }}</strong>
+      <div class="mb-1 text-muted">{{ post.date }}</div>
+        <div class="card-img-block">
+            <img class="card-img-top" src="../media/{{ post.image }}" alt="Card image cap">
+        </div>
+            <div class="card-body pt-0">
+            <h5 class="card-title">{{ post.title }}</h5>
+            <p class="card-text">{{ post.summary }}</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
           </div>
         </div>
+</div>
+  {% endfor %}
 {% endblock %}
