--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,5 +1,4 @@
 {% extends 'blog/base.html' %}
-{% load staticfiles %}
 
 
 {% block news%}
@@ -7,7 +6,7 @@
 <div class="jumbotron p-3 p-md-5 text-white rounded bg-color">
 
     <h1 class="display-5 font-italic">{{ new.title }}</h1>
-    <img class="col-lg-6"src="../media/{{ new.image }}" alt="">
+    <img class="col-lg-6"src="{{ new.image.url}}" alt="">
     <p class="lead my-3">{{ new.text }}</p>
     <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Continue reading...</a></p>
 
@@ -23,12 +22,12 @@
       <strong class="d-inline-block mb-2 text-primary">Category: {{ post.category }}</strong>
       <div class="mb-1 text-muted">{{ post.date }}</div>
         <div class="card-img-block">
-            <img class="card-img-top" src="../media/{{ post.image }}" alt="Card image cap">
+            <img class="card-img-top" src="{{ post.image.url }}" alt="Card image cap">
         </div>
             <div class="card-body pt-0">
             <h5 class="card-title">{{ post.title }}</h5>
             <p class="card-text">{{ post.summary }}</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="{% url 'detail' post.id %}" class="btn btn-primary">Read more &rarr;</a>
           </div>
         </div>
 </div>
