--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -3,33 +3,36 @@
 
 {% block news%}
 {% for new in news.all %}
-<div class="jumbotron p-3 p-md-5 text-white rounded bg-color">
 
-    <h1 class="display-5 font-italic">{{ new.title }}</h1>
-    <img class="col-lg-6"src="{{ new.image.url}}" alt="">
-    <p class="lead my-3">{{ new.text }}</p>
-    <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Continue reading...</a></p>
-
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-3">Fluid Jumbotron!</h1>
+    <p>This is a fluid jumbotron. Fluid jumbotrons occupy the entire horizontal space of its parent.</p>
+    <p>Fluid jumbotrons are new in Bootstrap 4.</p>
+    <p><a class="btn btn-primary btn-lg" href="http://www.quackit.com/bootstrap/bootstrap_4/tutorial/bootstrap_jumbotron.cfm" role="button">Jumbotron Examples &raquo;</a></p>
+  </div>
 </div>
 {% endfor %}
 {% endblock %}
 
 
 {% block content %}
+
 {% for post in posts.all %}
 <div class="col-md-4 mt-4">
-    <div class="card profile-card-5 bg-color-news">
-      <strong class="d-inline-block mb-2 text-primary">Category: {{ post.category }}</strong>
-      <div class="mb-1 text-muted">{{ post.date }}</div>
-        <div class="card-img-block">
-            <img class="card-img-top" src="{{ post.image.url }}" alt="Card image cap">
-        </div>
-            <div class="card-body pt-0">
-            <h5 class="card-title">{{ post.title }}</h5>
-            <p class="card-text">{{ post.summary }}</p>
-            <a href="{% url 'detail' post.id %}" class="btn btn-primary">Read more &rarr;</a>
-          </div>
-        </div>
+  <div class="card profile-card-5 bg-color-news">
+    <strong class="d-inline-block mb-2 text-primary">Category: {{ post.category }}</strong>
+    <div class="mb-1 text-muted">{{ post.date }}</div>
+    <div class="card-img-block">
+      <img class="card-img-top" src="{{ post.image.url }}" alt="Card image cap">
+    </div>
+    <div class="card-body pt-0">
+      <h5 class="card-title">{{ post.title }}</h5>
+      <p class="card-text">{{ post.summary }}</p>
+      <a href="{% url 'detail' post.id %}" class="btn btn-primary">Read more &rarr;</a>
+    </div>
+  </div>
 </div>
-  {% endfor %}
+{% endfor %}
+
 {% endblock %}
