--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -37,7 +37,7 @@
             <a class="nav-link" href="{% static 'resume_heb.pdf' %}">Resume Heb</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'portfolio' %}"">Portfolio</a>
+            <a class="nav-link" href="{% url 'portfolio' %}">Portfolio</a>
           </li>
         </ul>
       </div>
