--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -6,10 +6,9 @@
 
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-3">Fluid Jumbotron!</h1>
-    <p>This is a fluid jumbotron. Fluid jumbotrons occupy the entire horizontal space of its parent.</p>
-    <p>Fluid jumbotrons are new in Bootstrap 4.</p>
-    <p><a class="btn btn-primary btn-lg" href="http://www.quackit.com/bootstrap/bootstrap_4/tutorial/bootstrap_jumbotron.cfm" role="button">Jumbotron Examples &raquo;</a></p>
+    <h1 class="display-3">{{ new.title }}</h1>
+    <p>{{ new.text }}</p>
+    <p><a class="btn btn-primary btn-lg" href="#" role="button">Read &raquo;</a></p>
   </div>
 </div>
 {% endfor %}
