--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -3,7 +3,6 @@
 
 {% block news%}
 {% for new in news.all %}
-
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
     <h1 class="display-3">{{ new.title }}</h1>
@@ -16,8 +15,7 @@
 
 
 {% block content %}
-
-{% for post in posts.all %}
+{% for post in posts%}
 <div class="col-md-4 mt-4">
   <div class="card profile-card-5 bg-color-news">
     <strong class="d-inline-block mb-2 text-primary">Category: {{ post.category }}</strong>
@@ -33,5 +31,28 @@
   </div>
 </div>
 {% endfor %}
+{% endblock %}
 
+
+{% block page %}
+<div class="paginator container text-center">
+  <div class="col-lg-4 col-lg-offset-4">
+    <br>
+  {% if posts.has_previous %}
+  <a class="paginator-action" href="?page=1"><i class="fas fa-angle-double-left"></i></a>
+  <a class="paginator-action" href="?page={{ posts.pervious_page_number }}"><i class="fas fa-angle-left"></i></a>
+  {% endif %}
+  {% for num in posts.paginator.page_range %}
+  {% if posts.number == num %}
+  <span class="paginator-number paginator-current" >{{ num }}</span>
+  {% elif num > posts.number|add:'-2' and num < posts.number|add:'2' %}
+  <a class="" href="?page={{ num }}">{{ num }}</a>
+  {% endif %}
+  {% endfor %}
+  {% if posts.has_next %}
+  <a class="paginator-action" href="?page={{ posts.next_page_number }}"><i class="fas fa-angle-right"></i></a>
+  <a class="paginator-action" href="?page={{ posts.paginator.num_pages }}"><i class="fas fa-angle-double-right"></i></a>
+  {% endif %}
+</div>
+</div>
 {% endblock %}
