--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -17,7 +17,7 @@
 {% for post in posts%}
 <div class="col-md-4 mt-4">
   <div class="card profile-card-5 bg-color-news">
-    <strong class="d-inline-block mb-2 text-primary">Category: {{ post.category }}</strong>
+    <strong class="d-inline-block mb-2 text-primary">Category: <a href="{% url 'list_of_post_category' post.category.slug %}">{{ post.category }}</a></strong>
     <div class="mb-1 text-muted">{{ post.date }}</div>
     <div class="card-img-block">
       <img class="card-img-top" src="{{ post.image.url }}" alt="Card image cap">
