--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -11,7 +11,7 @@
   </div>
   <div class="card-footer text-muted">
     Posted on: {{ post.date }}
-    Category: <a href="#">{{ post.category }}</a>
+    Category: <a href="{% url 'list_of_post_category' post.category.slug %}">{{ post.category }}</a>
     Posted by: {{ post.post_by }}
   </div>
 </div>
