--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -1,18 +1,36 @@
 {% extends 'blog/base.html' %}
 
+
+
+
+{% block news%}
+<div class="banner-content">
+  <h1 class="text-white text-uppercase mb-10">{{ news.title }}</h1>
+  <p class="text-white mb-30">{{ news.text }}</p>
+  <a href="{{ news.link }}" class="primary-btn d-inline-flex align-items-center"><span class="mr-10">Get Started</span><span class="lnr lnr-arrow-right"></span></a>
+</div>
+{% endblock %}
+
 {% block content %}
-<hr>
-<div class="card mb-4">
-  <br>
-  <img  src="{{ post.image.url }}"  height="300" width="300">
-  <div class="card-body">
-    <h2 class="card-title">{{ post.title }}</h2>
-    <p class="card-text">{{post.text}}</p>
+<div class="white-bg">
+  <div class="container">
+    <div class="section-top-border">
+      <h3 class="mb-30">{{ post.title }}</h3>
+      <div class="row">
+        <div class="col-md-3">
+          <img src="{{ post.image.url }}" alt="" class="img-fluid">
+        </div>
+        <div class="col-md-9 mt-sm-20">
+          <p>{{post.text}}</p>
+        </div>
+      </div>
+    </div>
   </div>
   <div class="card-footer text-muted">
     Posted on: {{ post.date }}
     Category: <a href="{% url 'list_of_post_category' post.category.slug %}">{{ post.category }}</a>
     Posted by: {{ post.post_by }}
   </div>
-</div>
+  </div>
+
 {% endblock %}
