--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -1,140 +1,162 @@
-<!doctype html>
-<html lang="en">
+
+{%  load staticfiles %}
+<!DOCTYPE html>
+<html lang="zxx" class="no-js">
 <head>
-  {% load staticfiles %}
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+	<!-- Mobile Specific Meta -->
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<!-- Favicon-->
+	<link rel="shortcut icon" href="img/fav.png">
+	<!-- Author Meta -->
+	<meta name="author" content="CodePixar">
+	<!-- Meta Description -->
+	<meta name="description" content="">
+	<!-- Meta Keyword -->
+	<meta name="keywords" content="">
+	<!-- meta character set -->
+	<meta charset="UTF-8">
+	<!-- Site Title -->
+	<title>{{ site_settings.site_title }}</title>
+
+	<link href="https://fonts.googleapis.com/css?family=Poppins:300,500,600" rel="stylesheet">
+		<!--
+		CSS
+		============================================= -->
+		<link rel="stylesheet" href="{% static 'css/linearicons.css' %}">
+		<link rel="stylesheet" href="{% static 'css/owl.carousel.css' %}">
+		<link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
+		<link rel="stylesheet" href="{% static 'css/nice-select.css' %}">
+		<link rel="stylesheet" href="{% static 'css/magnific-popup.css' %}">
+		<link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+		<link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+	</head>
+	<body>
+		<div class="main-wrapper-first">
+			<div class="hero-area relative">
+				<header>
+					<div class="container">
+						<div class="header-wrap">
+							<div class="header-top d-flex justify-content-between align-items-center">
+								<div class="logo">
+									<a href="{% url 'home' %}"><img src="{% static 'img/logo.png' %}" height="40" width="150" alt="" > </a>
+								</div>
+            {% block menu %}
+            {% endblock %}
+							</div>
+						</div>
+					</div>
+				</header>
+				<div class="banner-area">
+					<div class="container">
+						<div class="row height align-items-center">
+							<div class="col-lg-7">
+								{% block news %}
+                {% endblock %}
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="main-wrapper">
+			<div class="working-process-area">
+				<div class="container">
+					<div class="row justify-content-center">
+						<div class="col-lg-6">
+							<div class="section-title text-center">
+								<h2>Our Working Process</h2>
+								<p>It won’t be a bigger problem to find one video game lover in your neighbor. Since the introduction of Virtual Game, it has been achieving</p>
+							</div>
+						</div>
+					</div>
+					<div class="total-work-process d-flex flex-wrap justify-content-around align-items-center">
+						<div class="single-work-process">
+							<div class="work-icon-box">
+								<span class="lnr lnr-funnel"></span>
+							</div>
+							
+						</div>
+						<div class="work-arrow">
+							<img src="{% static 'img/elements/work-arrow.png' %}" alt="">
+						</div>
+						<div class="single-work-process">
+							<div class="work-icon-box">
+								<span class="lnr lnr-layers"></span>
+							</div>
+
+						</div>
+						<div class="work-arrow">
+							<img src="{% static 'img/elements/work-arrow.png' %}" alt="">
+						</div>
+						<div class="single-work-process">
+							<div class="work-icon-box">
+								<span class="lnr lnr-paw"></span>
+							</div>
+
+						</div>
+						<div class="work-arrow">
+							<img src="{% static 'img/elements/work-arrow.png' %}" alt="">
+						</div>
+						<div class="single-work-process">
+							<div class="work-icon-box">
+								<span class="lnr lnr-smile"></span>
+							</div>
+
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="main-wrapper">
+			<!-- Start Feature Area -->
+			<section class="featured-area">
+				<div class="container">
+
+					<div class="row">
+					{% block content %}
+          {% endblock %}
+
+					</div>
+				</div>
+
+			</section>
 
 
-  <title>{{ site_settings.site_title }}</title>
+			<!-- End Feature Area -->
+			<!-- Start Remarkable Wroks Area -->
 
-  <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-  <link href="{% static 'MDB/css/mdb.min.css' %}" rel="stylesheet">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="{% static 'css/style.css' %}">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-</head>
-
-<body>
-
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="{% url 'home' %}">Klondike-X</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse " id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item ">
-            <a class="nav-link" href="http://github.com/xor0x">GitHub<span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% static 'resume.pdf' %}">Resume Eng</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% static 'resume_heb.pdf' %}">Resume Heb</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'portfolio' %}">Portfolio</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </header>
-
-  <main role="main">
-
-    {% block news %}
-    {% endblock %}
-
-    <div class="container">
-      <div class="row mb-2">
-        {% block content %}
-        {% endblock %}
-      </div>
-    </div>
-  </main>
-
-  {% block page %}
-  {% endblock %}
+            {% block page %}
+            {% endblock %}
 
 
-  <!-- Footer -->
-  <footer class="page-footer font-small stylish-color-dark pt-4">
-    <!-- Footer Links -->
-    <div class="container text-center text-md-left">
-      <!-- Grid row -->
-      <div class="row">
-        <!-- Grid column -->
-        <div class="col-md-4 mx-auto">
-          <!-- Content -->
-          <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Klonike-X</h5>
-          <p></p>
-        </div>
-        <!-- Grid column -->
-        <hr class="clearfix w-100 d-md-none">
-        <!-- Grid column -->
-        <div class="col-md-2 mx-auto">
-          <!-- Links -->
-          <h5 class="font-weight-bold text-uppercase mt-3 mb-4"></h5>
-          <ul class="list-unstyled">
-            <li>
-              <a href="#!">My Blog</a>
-            </li>
-            <li>
-              <a href="http://github.com/xor0x" target="_blank">GitHub</a>
-            </li>
-            <li>
-              <a href="#!">Twitter</a>
-            </li>
-
-          </ul>
-        </div>
-        <!-- Grid column -->
-        <hr class="clearfix w-100 d-md-none">
-        <!-- Grid column -->
-        <div class="col-md-2 mx-auto">
-          <!-- Links -->
-          <h5 class="font-weight-bold text-uppercase mt-3 mb-4"></h5>
-          <ul class="list-unstyled">
 
 
-          </ul>
-        </div>
-        <!-- Grid column -->
-        <hr class="clearfix w-100 d-md-none">
-        <!-- Grid column -->
-        <div class="col-md-2 mx-auto">
-          <!-- Links -->
-          <h5 class="font-weight-bold text-uppercase mt-3 mb-4"></h5>
-          <ul class="list-unstyled">
+
+				<footer>
+					<div class="container">
+						<div class="footer-content d-flex justify-content-between align-items-center flex-wrap">
+							<div class="copy-right-text">Copyright &copy; 2018 Klondike-X</div>
+						</div>
+					</div>
+				</footer>
+			</section>
+			<!-- End Footer Widget Area -->
+
+		</div>
 
 
-          </ul>
-        </div>
-        <!-- Grid column -->
-      </div>
-      <!-- Grid row -->
-    </div>
-    <!-- Footer Links -->
-    <hr>
 
-    <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© {% now "Y" %} Alex Misyuk
-    </div>
-    <!-- Copyright -->
 
-  </footer>
-  <!-- Footer -->
-
-  <!-- Bootstrap core JavaScript
-  ================================================== -->
-  <!-- Placed at the end of the document so the pages load faster -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-</body>
+		<script src="{% static 'js/vendor/jquery-2.2.4.min.js' %}"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+		<script src="{% static 'js/vendor/bootstrap.min.js' %}"></script>
+		<script src="{% static 'js/jquery.ajaxchimp.min.js' %}"></script>
+		<script src="{% static 'js/owl.carousel.min.js' %}"></script>
+		<script src="{% static 'js/jquery.nice-select.min.js' %}"></script>
+		<script src="{% static 'js/jquery.magnific-popup.min.js' %}"></script>
+		<script src="{% static 'js/main.js' %}"></script>
+	</body>
 </html>
