--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -21,7 +21,7 @@
           <img src="{{ post.image.url }}" alt="" class="img-fluid">
         </div>
         <div class="col-md-9 mt-sm-20">
-          <p>{{post.text}}</p>
+          <p>{{ post.text | safe }}</p>
         </div>
       </div>
     </div>
