--- a/myblog/templates/portfolio/base.html
+++ b/myblog/templates/portfolio/base.html
@@ -37,7 +37,7 @@
             <a class="nav-link" href="{% static 'resume_heb.pdf' %}">Resume Heb</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">Blog</a>
+            <a class="nav-link" href="{% url 'home' %}">Blog</a>
           </li>
         </ul>
       </div>
