--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -1,7 +1,8 @@
 {% extends 'blog/base.html' %}
 
-
-
+{% block title %}
+{{ site_settings.site_title }} - {{ post.title }}
+{% endblock %}
 
 {% block news%}
 <div class="banner-content">
