--- a/blog/templates/blog/post/category.html
+++ b/blog/templates/blog/post/category.html
@@ -1,5 +1,8 @@
 {% extends 'blog/base.html' %}
 
+{% block title %}
+{{ site_settings.site_title }}
+{% endblock %}
 
 {% block menu %}
 <div class="main-menubar d-flex align-items-center">
