--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -16,7 +16,7 @@
 	<!-- meta character set -->
 	<meta charset="UTF-8">
 	<!-- Site Title -->
-	<title>{{ site_settings.site_title }}</title>
+	<title>{% block title %}{% endblock %}</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,500,600" rel="stylesheet">
 		<!--
