--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -22,7 +22,7 @@
           <img src="{{ post.image.url }}" alt="" class="img-fluid">
         </div>
         <div class="col-md-9 mt-sm-20">
-          <p>{{ post.text | safe }}</p>
+          <p class="sample-text">{{ post.text | safe }}</p>
         </div>
       </div>
     </div>
