--- a/myblog/static/css/main.css
+++ b/myblog/static/css/main.css
@@ -4,7 +4,7 @@
 /* Mobile Layout: 320px */
 /* Wide Mobile Layout: 480px */
 /* =================================== */
-/*  Basic Style 
+/*  Basic Style
 /* =================================== */
 ::-webkit-input-placeholder {
   /* WebKit, Blink, Edge */
@@ -2079,7 +2079,7 @@ body {
 .hero-area:after {
   content: "";
   position: absolute;
-  bottom: 0;
+  bottom: 20%;
   right: 0;
   width: 50%;
   height: 90%;
