--- a/myblog/templates/registration/password_change_form.html
+++ b/myblog/templates/registration/password_change_form.html
@@ -1,7 +1,7 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-  <h3>Forgot password</h3>
+  <h3>Change Password</h3>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
