--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -149,16 +149,11 @@
 								<!-- Collect the nav links, forms, and other content for toggling -->
 								<div class="collapse navbar-collapse" id="#navbar-collapse-1">
 									<ul class="nav navbar-nav main-nav">
-										<li class="active"><a href="index.html">News</a></li>
-										<li><a href="category.html">Mobile</a></li>
-										<li><a href="blog.html">Tablet</a></li>
-										<li><a href="blog.html">Gadgets</a></li>
-										<li><a href="blog.html">Camera</a></li>
-										<li><a href="blog.html">Design</a></li>
+										<li class="active"><a href="#">News</a></li>
 										<li class="dropdown m-menu-fw"><a href="#" data-toggle="dropdown" class="dropdown-toggle">More
 											<span><i class="fa fa-angle-down"></i></span></a>
 											<ul class="dropdown-menu">
-												<li>
+											<!--	<li>
 													<div class="m-menu-content">
 														<ul class="col-sm-3">
 															<li class="dropdown-header">Widget Haeder</li>
@@ -193,7 +188,7 @@
 															<li><a href="#">Pixel Perfect Graphics</a></li>
 														</ul>
 													</div>
-												</li>
+												</li> -->
 											</ul>
 										</li>
 									</ul>
