New Template Fix

--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -75,8 +75,8 @@ Klondike-x
       <div class="widget_title widget_black">
           <h2><a href="#">News</a></h2>
       </div>
-      <div class="widget_body"><img class="img-responsive left" src="assets/img/editor.jpg"
-                                    alt="Generic placeholder image">
+      <div class="widget_body"><img class="img-responsive left" src="{{ news.image }}"
+                                    alt="Generic placeholder image" height="150" width="200">
           <h3>{{ news.title }}</h3>
 
           <p>{{ news.text }}</p>
