--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -75,7 +75,7 @@ Klondike-x
       <div class="widget_title widget_black">
           <h2><a href="#">News</a></h2>
       </div>
-      <div class="widget_body"><img class="img-responsive left" src="{{ news.image }}"
+      <div class="widget_body"><img class="img-responsive left" src="{{ news.image.url }}"
                                     alt="Generic placeholder image" height="150" width="200">
           <h3>{{ news.title }}</h3>
 
