--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>{% block title %}{% endblock %}</title>
+	<title>Klondike-X {% block title %}{% endblock %}</title>
 
 	<!-- favicon -->
 	<link href="{% static 'assets/img/favicon.png' %}" rel=icon>
@@ -87,23 +87,25 @@
 									<div class="right_section">
 										<ul class="nav navbar-nav">
 											{% if user.is_authenticated %}
-											<li>	<a class="genric-btn success-border circle" href="javascript:{document.getElementById('logout').submit()}"> Logout</a></li>
+											<li><a class="genric-btn success-border circle" href="javascript:{document.getElementById('logout').submit()}"> Logout</a></li>
+											<li><a href="{% url 'profile' %}" class="genric-btn success-border circle">Profile</a></li>
 											<form class="" id="logout" action="{% url 'logout' %}" method="post">
 												{% csrf_token %}
 												<input type="hidden" name="" value="">
 											</form>
+
 											{% else %}
 											<li><a href="{% url 'login' %}" class="genric-btn success-border circle">Login</a></li>
 											<li><a href="{% url 'signup' %}" class="genric-btn success-border circle">Signup</a></li>
 											{% endif %}
-											<li class="dropdown lang">
+										<!--	<li class="dropdown lang">
 												<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1"
 												data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">En <i
 												class="fa fa-angle-down"></i></button>
 												<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
 													<li><a href="#">Bn</a></li>
 												</ul>
-											</li>
+											</li>-->
 										</ul>
 										<!-- Language Section -->
 
