--- a/myblog/templates/registration/password_change_form.html
+++ b/myblog/templates/registration/password_change_form.html
@@ -1,5 +1,5 @@
 {% extends 'blog/base.html' %}
-
+{% block title %}Change password for user{% endblock %}
 {% block content %}
   <h3>Change Password</h3>
   <form method="post">
