--- a/account/templates/accounts/profile.html
+++ b/account/templates/accounts/profile.html
@@ -1,13 +1,21 @@
-{% extends 'blog/base.html' %}
 
+{% extends 'blog/base.html' %}
+{% block title %}Profile{% endblock %}
 {% block content %}
-<h2>Dashboard</h2>
+{% load staticfiles %}
+{% load avatar_tags %}
+<h2>Profile</h2>
 <div class="container">
-  <h2>{{ user.get_full_name }}</h2>
+
+  <h2> {% avatar user class="img-circle img-responsive" id="user_avatar" %} {{ user.username }}</h2>
   <ul>
-    <li>Username: {{ user.username }}</li>
-    <li>Location: {{ user.profile.location }}</li>
-    <li>Birth Date: {{ user.profile.birth_date }}</li>
+    <li><a href="{% url 'avatar_add' %}">Add your avatar</a></li>
+    <li><a href="{% url 'avatar_change' %}">Change your avatar</a></li>
+    <li><a href="{% url 'avatar_delete' %}">Delete your avatar</a></li>
+    <li>Email: {{ user.email }}</li>
+    <li>First Name: {{ user.first_name }}</li>
+    <li>Last Name: {{ user.last_name }}</li>
+    <li><input type="button" value="Change password" onclick="window.location.href='{% url 'password_change' %}'" /></li>
   </ul>
 </div>
 {% endblock %}
