--- a/blog/templates/blog/post/category.html
+++ b/blog/templates/blog/post/category.html
@@ -1,19 +1,10 @@
 {% extends 'blog/base.html' %}
 
 {% block title %}
-{{ site_settings.site_title }}
+{{ post.category }}
 {% endblock %}
 
-{% block menu %}
-<div class="main-menubar d-flex align-items-center">
-  <nav class="hide">
-    <a href="http://github.com/xor0x" target="_blank">GitHub</a>
-    <a href="{% url 'portfolio' %}">Portfolio</a>
 
-  </nav>
-  <div class="menu-bar"><span class="lnr lnr-menu"></span></div>
-</div>
-{% endblock %}
 
 
 {% block content %}
