--- a/myblog/templates/registration/password_change_done.html
+++ b/myblog/templates/registration/password_change_done.html
@@ -1,5 +1,5 @@
 {% extends 'blog/base.html' %}
-
+{% block title %}Password change successful{% endblock %}
 
 {% block content %}
   <h1>Password change successful</h1>
