--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -36,7 +36,7 @@
 
         <div class="entity_social">
             <span><i class="fa fa-eye"></i> {{ post.watch_total }} <a href="#">Watched</a> </span>
-            <span><i class="fa fa-comments-o"></i>4 <a href="#">Comments</a> </span>
+            <span><i class="fa fa-comments-o"></i> {{ post.comments.count }} <a href="#">Comments</a> </span>
         </div>
         <!-- entity_social -->
 
@@ -88,6 +88,7 @@
 
           <p>{{ news.text | safe }}</p>
           <form>
+            {% csrf_token %}
             <input type="button" value="Read More" onclick="window.location.href='{{ news.link }}'" />
           </form>
       </div>
