--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -1,5 +1,6 @@
 
 {%  load staticfiles %}
+{% block site %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -115,10 +116,10 @@
 												<ul class="dropdown-menu">
 													<li>
 														<div class="head-search">
-															<form role="form">
+															<form role="form" action="/search/?">
 																<!-- Input Group -->
 																<div class="input-group">
-																	<input type="text" class="form-control"
+																	<input type="text" name="title" class="form-control"
 																	placeholder="Type Something"> <span class="input-group-btn">
 																		<button type="submit"
 																		class="btn btn-primary">Search
@@ -313,3 +314,4 @@
 </body>
 
 </html>
+{% endblock %}
