--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -61,7 +61,7 @@
         {% for num in posts.paginator.page_range %}
         {% if posts.number == num %}
         <li><a href="?page={{ num }}">{{ num }}</a></li>
-        {% elif num > posts.number|add:'-3' and num < posts.number|add:'3' %}
+        {% elif num > posts.number|add:'-6' and num < posts.number|add:'6' %}
         <li><a href="?page={{ num }}">{{ num }}</a></li>
         {% endif %}
         {% endfor %}
@@ -82,6 +82,7 @@
       <div class="widget_title widget_black">
           <h2><a href="#">News</a></h2>
       </div>
+
       <div class="widget_body"><img class="img-responsive left" src="{{ news.image.url }}"
                                     alt="Generic placeholder image" height="150" width="200">
           <h3>{{ news.title }}</h3>
@@ -92,70 +93,31 @@
             <input type="button" value="Read More" onclick="window.location.href='{{ news.link }}'" />
           </form>
       </div>
+      <hr>
   </div>
 
 <div class="widget">
     <div class="widget_title widget_black">
-        <h2><a href="#">Popular News</a></h2>
+        <h2><a href="#">Popular Posts</a></h2>
     </div>
     <div class="media">
-        <div class="media-left">
-            <a href="#"><img class="media-object" src="assets/img/pop_right1.jpg" alt="Generic placeholder image"></a>
-        </div>
         <div class="media-body">
             <h3 class="media-heading">
-                <a href="single.html" target="_self">Canon launches photo centric 00214 Model supper shutter camera</a>
-            </h3> <span class="media-date"><a href="#">10Aug- 2015</a>,  by: <a href="#">Eric joan</a></span>
+              {% if empty %}
+              <h2>No posts</h2>
+              {% else %}
+              {% for post in popular_posts|slice:"1:" reversed %}
 
-            <div class="widget_article_social">
-                <span>
-                    <a href="single.html" target="_self"> <i class="fa fa-share-alt"></i>424</a> Shares
-                </span>
-                <span>
-                    <a href="single.html" target="_self"><i class="fa fa-comments-o"></i>4</a> Comments
-                </span>
-            </div>
+              <p><a href="{% url 'detail' post.id %}" target="_self">{{ post.title }}</a></p>
+                {% endfor %}
+                {% endif %}
         </div>
     </div>
-    <p class="widget_divider"><a href="#" target="_self">More News&nbsp;&raquo;</a></p>
+    <hr>
 </div>
 <!-- Popular News -->
 
 
-
-
-
-<div class="widget reviews m30">
-    <div class="widget_title widget_black">
-        <h2><a href="#">Reviews</a></h2>
-    </div>
-    <div class="media">
-        <div class="media-left">
-            <a href="#"><img class="media-object" src="assets/img/pop_right1.jpg" alt="Generic placeholder image"></a>
-        </div>
-        <div class="media-body">
-            <h3 class="media-heading">
-                <a href="single.html" target="_self">DSLR is the most old camera at this time readmore about new
-                    products</a>
-            </h3>
-            <span class="rating">
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star-half-full"></i>
-            </span>
-        </div>
-    </div>
-
-    <p class="widget_divider"><a href="#" target="_self">More News&nbsp;&raquo;</a></p>
-</div>
-<!-- Reviews News -->
-
-<div class="widget hidden-xs m30">
-    <img class="img-responsive widget_img" src="assets/img/right_add6.jpg" alt="add_one">
-</div>
-<!-- Advertisement -->
 
 <div class="widget m30">
     <div class="widget_title widget_black">
