--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -119,7 +119,7 @@
 															<form role="form" action="/search/?">
 																<!-- Input Group -->
 																<div class="input-group">
-																	<input type="text" name="title" class="form-control"
+																	<input type="text" name="title__icontains" class="form-control"
 																	placeholder="Type Something"> <span class="input-group-btn">
 																		<button type="submit"
 																		class="btn btn-primary">Search
